# Exoskeleton-Controller

./: sumcall.py
p0_lag_compensator/: .gitignore  CMakeLists.txt  manifest.xml  nodelet_plugins.xml
p0_lag_compensator/include/p0_lag_compensator/: p0_lag_compensator.hpp
p0_lag_compensator/launch/: p0_lag_comp_grav_comp.launch  p0_lag_compensator.launch
p0_lag_compensator/param/: lag_comp_grav_comp.yaml  lag_demo.yaml  lag_test_1.yaml
p0_lag_compensator/python/: admittance_log_visualizer.py  admittance_plotting_utils.py  play_with_hdf5.py
p0_lag_compensator/src/: calibration.cpp  p0_lag_comp_grav_comp.cpp  p0_lag_compensator.cpp
stiffness_estimate/: CMakeLists.txt  manifest.xml  nodelet_plugins.xml
stiffness_estimate/include/stiffness_estimate/: stiffness_estimate.hpp
stiffness_estimate/launch/: stiffness_estimate.launch
stiffness_estimate/param/: stiffness_estimate_torque_ctrl.yaml
stiffness_estimate/src/: impulse_response.py  stiffness_estimate.cpp  stiffness_estimate_chirp.cpp  stiffness_estimate_sin.cpp
